--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -10,7 +10,15 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.alpha.ioc</groupId>
     <version>1.0-SNAPSHOT</version>
+
     <artifactId>domain</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.alpha.ioc</groupId>
+            <artifactId>di</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
