--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>1_webapp</module>
         <module>2_cmdapp</module>
         <module>persist</module>
+        <module>di</module>
     </modules>
 
     <packaging>pom</packaging>
