--- a/1_webapp/pom.xml
+++ b/1_webapp/pom.xml
@@ -53,6 +53,12 @@
                 <!--</exclusion>-->
             <!--</exclusions>-->
         </dependency>
+        <dependency>
+            <groupId>com.alpha.ioc</groupId>
+            <artifactId>di</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
 
     </dependencies>
 
