--- a/di/pom.xml
+++ b/di/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>di</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
 </project>
