--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,23 @@
         <module>persist</module>
         <module>di</module>
     </modules>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+       <!-- <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>-->
+
+    </dependencies>
 
     <packaging>pom</packaging>
+
 
 
 
