--- a/1_webapp/web/WEB-INF/web.xml
+++ b/1_webapp/web/WEB-INF/web.xml
@@ -4,6 +4,6 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
     <listener>
-        <listener-class>com.alpha.ioc.di.IocInitializeListener</listener-class>
+        <listener-class>com.alpha.ioc.di.web.IocInitializeListener</listener-class>
     </listener>
 </web-app>
