--- a/1_webapp/web/WEB-INF/web.xml
+++ b/1_webapp/web/WEB-INF/web.xml
@@ -4,6 +4,14 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
     <listener>
-        <listener-class>com.alpha.ioc.di.web.IocInitializeListener</listener-class>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath:spring-config.xml</param-value>
+    </context-param>
+    <context-param>
+        <param-name>spring.profiles.active</param-name>
+        <param-value>rdb</param-value>
+    </context-param>
 </web-app>
