--- a/2_cmdapp/pom.xml
+++ b/2_cmdapp/pom.xml
@@ -5,8 +5,11 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.alpha.ioc</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <parent>
+        <artifactId>root</artifactId>
+        <groupId>com.alpha.ioc</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <artifactId>cmdapp</artifactId>
     <dependencies>
         <dependency>
@@ -46,7 +49,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <!--(end) for package jar with dependencies -->
         </plugins>
     </build>
 
