--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -2,22 +2,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <!-- <parent>
+     <parent>
          <artifactId>root</artifactId>
          <groupId>com.alpha.ioc</groupId>
          <version>1.0-SNAPSHOT</version>
-     </parent>-->
+     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.alpha.ioc</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <!--<groupId>com.alpha.ioc</groupId>-->
+    <!--<version>1.0-SNAPSHOT</version>-->
 
     <artifactId>domain</artifactId>
     <dependencies>
-        <dependency>
+        <!--<dependency>
             <groupId>com.alpha.ioc</groupId>
             <artifactId>di</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
