--- a/persist/pom.xml
+++ b/persist/pom.xml
@@ -4,9 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.alpha.ioc</groupId>
+    <parent>
+        <artifactId>root</artifactId>
+        <groupId>com.alpha.ioc</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
+    <!--<groupId>com.alpha.ioc</groupId>-->
     <artifactId>persist</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <!--<version>1.0-SNAPSHOT</version>-->
 
     <dependencies>
         <dependency>
